# A

./: CMakeLists.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
buils/: CMakeCache.txt  Makefile  cmake_install.cmake
buils/src/: Makefile  cmake_install.cmake
buils/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_A[1]_include.cmake
src/: A.cpp  A.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  MockA.cpp  MockA.h  test_A.cpp
